--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -3,6 +3,7 @@ site_url: https://ethyca.github.io/fidesops/
 nav:
   - What is Fidesops?: index.md
   - Use Cases: use_cases.md
+  - Getting Started: getting_started.md
   - Tutorial:
     - Zero to Privacy Request: tutorial/index.md
     - Installing Fidesops: tutorial/installation.md
