export new dpia attributes
This includes default n/a values for the progress and link properties that are not required. Updated testing in this commit as well.

Determined that leaving the progress as a string is likely prefereable to having a strict requirement for the progress status. One user as an example intimiated they would prefer to have that be a link to a the DPIA status. These are likely to evolve over time as users voice opinions on what makes most sense here.

--- a/fidesctl/demo_resources/demo_system.yml
+++ b/fidesctl/demo_resources/demo_system.yml
@@ -8,6 +8,10 @@ system:
     third_country_transfers:
     - USA
     - CAN
+    data_protection_impact_assessment:
+      is_required: True
+      progress: Complete
+      link: https://example.org/analytics_system_data_protection_impact_assessment
     privacy_declarations:
       - name: Analyze customer behaviour for improvements.
         data_categories:
