[SaaS Connector] SaaS fixture cleanup (#335)
Separating SaaS example and Mailchimp fixtures

Co-authored-by: Adrian Galvan <adrian@ethyca.com>

--- a/saas_config.toml
+++ b/saas_config.toml
@@ -10,3 +10,10 @@ domain = ""
 username = ""
 api_key = ""
 identity_email = ""
+
+[stripe]
+host = ""
+api_key = ""
+payment_types = ""
+page_limit = ""
+identity_email = ""
