--- a/fidesctl/.fides/dataset.yml
+++ b/fidesctl/.fides/dataset.yml
@@ -489,6 +489,8 @@ dataset:
 
           - name: data_protection_impact_assessment
             description: "Properties identifying if a DPIA is required, the status of it, and a link if applicable."
+            data_categories:
+              - system.operations
 
           - name: created_at
             description: "The timestamp of when the row was created"
