fix all the test errors and remove external tests from the check-all make target

--- a/fidesctl/.fides/fidesctl.toml
+++ b/fidesctl/.fides/fidesctl.toml
@@ -8,7 +8,7 @@ test_database_name = "fidesctl_test"
 
 [cli]
 server_host = "http://fidesctl"
-server_port = "8080"
+server_port = 8080
 
 [user]
 analytics_opt_out = false
