--- a/fidesctl/tests/test_invalid_config.toml
+++ b/fidesctl/tests/test_invalid_config.toml
@@ -1,5 +1,6 @@
 [cli]
-server_url = "http://invalid:8080"
+server_host = "http://invalid"
+server_port = "8080"
 
 [api]
 database_user = "postgres"
