Update command output and fix db scanning for fidesctl db

--- a/fidesctl/.fides/dataset.yml
+++ b/fidesctl/.fides/dataset.yml
@@ -1,7 +1,7 @@
 dataset:
   - fides_key: public
     organization_fides_key: default_organization
-    name: fidesctl
+    name: public
     description: "The dataset responsible for storing all of the data related to a fidesctl instance."
     meta: {}
     data_categories:
