data map user guide
This is a first draft of what a user guide might look like. Some further details are still necessary, but I wanted to explore the style of using the demo_resources and extending them appropriately to get to a data map.

Separately, it might make more sense to either tack this on to the flask app walkthrough, create a separate walkthrough, or simplify this by reorganizaing in a meaningful way.

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -29,11 +29,12 @@ nav:
       - Write a Policy: tutorial/policy.md
       - Add Google Analytics: tutorial/google.md
       - Manage Google Analytics with Fidesctl: tutorial/pass.md
-  - How-To Guides: 
+  - How-To Guides:
       - Generating Resources: guides/generate_resources.md
       - Example Policies: guides/policies.md
       - Extending the Taxonomy: guides/extending_taxonomy.md
-  - CI/CD Integration: 
+      - Generating a Data Map: guides/generating_datamap.md
+  - CI/CD Integration:
       - Overview: cicd/overview.md
       - Example Integrations: cicd/examples.md
   - Fides Language:
