--- a/fidesctl/.fides/fidesctl.toml
+++ b/fidesctl/.fides/fidesctl.toml
@@ -7,7 +7,7 @@ database_name = "fidesctl"
 test_database_name = "fidesctl_test"
 
 [cli]
-server_host = "http://fidesctl"
+server_host = "fidesctl"
 server_port = 8080
 
 [user]
