Implement generate dataset okta command (#440)
* Implement generate dataset okta command

* Add environment variables in Makefile and pr_checks

* Update code formatting

* Update command output and fix db scanning for fidesctl db

* Add new fidesctl_meta field to fidesctl annotations

* Add documentation for example using okta command

* Fix typo in docs

* Update down revision on database migration after merge from main

* Update fidesctl/src/fidesctl/core/api_helpers.py

Co-authored-by: Eduardo Armendariz <eduardo@ethyca.com>
Co-authored-by: Thomas <thomas.lapiana+github@pm.me>

--- a/fidesctl/.fides/dataset.yml
+++ b/fidesctl/.fides/dataset.yml
@@ -1,7 +1,7 @@
 dataset:
   - fides_key: public
     organization_fides_key: default_organization
-    name: fidesctl
+    name: public
     description: "The dataset responsible for storing all of the data related to a fidesctl instance."
     meta: {}
     data_categories:
@@ -186,6 +186,11 @@ dataset:
 
           - name: legal_basis
             description: "The legal basis for processing personal data as defined by Article 6 of the GDPR"
+            data_categories:
+              - system.operations
+
+          - name: fidesctl_meta
+            description: "Metadata specifically for the fidesctl application"
             data_categories:
               - system.operations
 
