FileNotFound from pip install
The template needed to be added to the manifest.ini file to be included in the distribution. Additionally, the path passed in export_helpers.py was unresolvable when installed as a pip package. Updating to use __file__ to use the correct path resolved this in local testing.

--- a/fidesctl/MANIFEST.in
+++ b/fidesctl/MANIFEST.in
@@ -3,5 +3,6 @@ include README.md
 include requirements.txt
 include dev-requirements.txt
 include versioneer.py
-include src/fidesctl/_version.py
 include src/fidesapi/alembic.ini
+include src/fidesctl/_version.py
+include src/fidesctl/templates/fides_datamap_template.xlsx
