Add Segment SaaS Connector + Authentication per Request  [#251]  (#350)
Implementing Segment connector and adding the ability to override the client config per SaaS request

Co-authored-by: mohan-pogala <pogala.mohan@gmail.com>

--- a/.github/workflows/unsafe_pr_checks.yml
+++ b/.github/workflows/unsafe_pr_checks.yml
@@ -35,4 +35,11 @@ jobs:
           HUBSPOT_DOMAIN: ${{ secrets.HUBSPOT_DOMAIN }}
           HUBSPOT_HAPIKEY: ${{ secrets.HUBSPOT_HAPIKEY }}
           HUBSPOT_IDENTITY_EMAIL: ${{ secrets.HUBSPOT_IDENTITY_EMAIL }}
+          SEGMENT_DOMAIN: ${{ secrets.SEGMENT_DOMAIN }}
+          SEGMENT_PERSONAS_DOMAIN: ${{ secrets.SEGMENT_PERSONAS_DOMAIN }}
+          SEGMENT_WORKSPACE: ${{ secrets.SEGMENT_WORKSPACE }}
+          SEGMENT_ACCESS_TOKEN: ${{ secrets.SEGMENT_ACCESS_TOKEN }}
+          SEGMENT_NAMESPACE_ID: ${{ secrets.SEGMENT_NAMESPACE_ID }}
+          SEGMENT_ACCESS_SECRET: ${{ secrets.SEGMENT_ACCESS_SECRET }}
+          SEGMENT_IDENTITY_EMAIL: ${{ secrets.SEGMENT_IDENTITY_EMAIL }}
         run: make pytest-saas
