--- a/pytest.ini
+++ b/pytest.ini
@@ -17,6 +17,7 @@ markers =
     integration_mailchimp
     integration_sentry
     integration_hubspot
+    integration_segment
     unit_saas
 
 filterwarnings =
