--- a/fidesctl/.fides/fidesctl.toml
+++ b/fidesctl/.fides/fidesctl.toml
@@ -7,7 +7,7 @@ database_name = "fidesctl"
 test_database_name = "fidesctl_test"
 
 [cli]
-server_url = "http://fidesctl:8080"
+server_url = "http://localhost:8080"
 
 [user]
 analytics_opt_out = false
