--- a/pytest.ini
+++ b/pytest.ini
@@ -16,6 +16,7 @@ markers =
     integration_saas
     integration_mailchimp
     integration_sentry
+    integration_stripe
     integration_hubspot
     integration_segment
     unit_saas
