--- a/saas_config.toml
+++ b/saas_config.toml
@@ -27,6 +27,10 @@ identity_email = ""
 host = ""
 access_token = ""
 identity_email = ""
+erasure_access_token = ""
+erasure_identity_email = ""
+user_id_erasure = ""
+issue_url = ""
 
 [segment]
 domain = ""
