[Saas Connectors] Segment Masking [#354] (#368)
* Fix segment data_protection_request for making GDPR delete requests.

- Add end-to-end test for segment masking that creates a user and then issues a GDPR delete request for that user.  Request is confirmed to have been made but we can't verify deletion here as there is a delay on the segment side.

* Remove two fields from segment yaml that are only used in testing to populate the initial data.

--- a/.github/workflows/unsafe_pr_checks.yml
+++ b/.github/workflows/unsafe_pr_checks.yml
@@ -45,6 +45,8 @@ jobs:
           HUBSPOT_HAPIKEY: ${{ secrets.HUBSPOT_HAPIKEY }}
           HUBSPOT_IDENTITY_EMAIL: ${{ secrets.HUBSPOT_IDENTITY_EMAIL }}
           SEGMENT_DOMAIN: ${{ secrets.SEGMENT_DOMAIN }}
+          SEGMENT_API_DOMAIN: ${{ secrets.SEGMENT_API_DOMAIN }}
+          SEGMENT_USER_TOKEN: ${{ secrets.SEGMENT_USER_TOKEN }}
           SEGMENT_PERSONAS_DOMAIN: ${{ secrets.SEGMENT_PERSONAS_DOMAIN }}
           SEGMENT_WORKSPACE: ${{ secrets.SEGMENT_WORKSPACE }}
           SEGMENT_ACCESS_TOKEN: ${{ secrets.SEGMENT_ACCESS_TOKEN }}
