--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -45,6 +45,9 @@ RUN pip install -r dev-requirements.txt
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
+COPY optional_requirements.txt optional_requirements.txt
+RUN pip install -r optional_requirements.txt
+
 # Copy in the application files and install fidesctl locally
 COPY . /fides/fidesctl
 WORKDIR /fides/fidesctl
