Run make target to build docs in pr checks

--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -65,6 +65,9 @@ jobs:
       - name: Scan fidesctl db
         run: make fidesctl-db-scan
 
+      - name: Build docs
+        run: make docs-build
+
   Black:
     needs: Build
     runs-on: ubuntu-latest
