Fix pr checks workflows typo

--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - fidesctl/**
-      - .github/workflows/pr_checks.yaml
+      - .github/workflows/pr_checks.yml
 
 env:
   CONTAINER: fidesctl-local
