--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -66,7 +66,7 @@ jobs:
         run: make fidesctl-db-scan
 
       - name: Build docs
-        run: make docs-build
+        run: make docs-build-no-deps
 
   Black:
     needs: Build
