--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -64,10 +64,7 @@ jobs:
 
       - name: Scan fidesctl db
         run: make fidesctl-db-scan
-
-      - name: Build docs trigger
-        run: make docs-build-ci
-
+        
   Black:
     needs: Build
     runs-on: ubuntu-latest
@@ -86,6 +83,25 @@ jobs:
 
       - name: Run formatter
         run: make black
+
+  Docs:
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download fidesctl container
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ env.CONTAINER }}
+          path: /tmp/
+
+      - name: Load fidesctl image
+        run: docker load --input /tmp/${{ env.CONTAINER }}.tar
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build docs
+        run: make docs-build-ci
 
   Pylint:
     needs: Build
