--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - earmenda-build-docs-pr-checks
   release:
     types: [published]
 
@@ -33,7 +34,7 @@ jobs:
         run: pip install -r docs/fides/requirements.txt
 
       - name: Install fidesctl
-        run: pip install -e fidesctl/
+        run: pip install -e fidesctl/[all]
 
       - name: Checkout the gh-pages branches
         run: git fetch origin gh-pages --depth=1
