updated dockerfile docs for clarity

--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -3,10 +3,11 @@ FROM --platform=linux/amd64 python:3.8-slim-buster as base
 # Update pip in the base image since we'll use it everywhere
 RUN pip install -U pip
 
-FROM base as builder
 #######################
 ## Tool Installation ##
 #######################
+
+FROM base as builder
 
 RUN : \
     && apt-get update \
@@ -23,9 +24,9 @@ RUN : \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-###################
-## Database Deps ##
-###################
+###########################
+## Database Dependencies ##
+###########################
 
 # Postgres
 RUN : \
@@ -50,9 +51,9 @@ RUN : \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-#################
-## Python Deps ##
-#################
+#########################
+## Python Dependencies ##
+#########################
 
 COPY dev-requirements.txt dev-requirements.txt
 RUN pip install -r dev-requirements.txt
@@ -63,9 +64,9 @@ RUN pip install -r requirements.txt
 COPY optional-requirements.txt optional-requirements.txt
 RUN pip install -r optional-requirements.txt
 
-#######################
-## Application Setup ##
-#######################
+###############################
+## General Application Setup ##
+###############################
 
 COPY . /fides/fidesctl
 WORKDIR /fides/fidesctl
@@ -79,18 +80,19 @@ ENV RUNNING_IN_DOCKER=TRUE
 EXPOSE 8080
 CMD ["fidesctl", "webserver"]
 
-############################
-## Application Dev Setup ##
-###########################
+###################################
+## Application Development Setup ##
+###################################
+
 FROM builder as dev
 
 # Install fidesctl as a symlink
 RUN pip install -e ".[all,mssql]"
 
+##################################
+## Production Application Setup ##
+##################################
 
-#############################
-## Application Prod Setup ##
-############################
 FROM builder as prod
 
 # Install without a symlink
