Run CI Checks with a packaged version of fidesctl (#482)
* Run CI Checks with a packaged version of fidesctl

* add the multi stage dockerfile

* fix the prod install

* have the PR check target the prod stage

* add another piece that was missing for pyodbc

* install the dist

* admit defeat and add init to the xenon skip, redo the dockerfile to include db deps in the final image

* checkpoint, the tests fail as expected when modules are missing or the manifets is sabotaged

* add files to the .dockerignore instead of removing them as build steps

* remove the init file xenon exemption

* updated dockerfile docs for clarity

Co-authored-by: ThomasLaPiana <thomas.lapiana@pm.me>

--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -1,11 +1,18 @@
-FROM --platform=linux/amd64 python:3.8-slim-buster
+FROM --platform=linux/amd64 python:3.8-slim-buster as base
 
-######################
-# Tool Installation ##
-######################
+# Update pip in the base image since we'll use it everywhere
+RUN pip install -U pip
 
-RUN apt-get update
-RUN apt-get install -y \
+#######################
+## Tool Installation ##
+#######################
+
+FROM base as builder
+
+RUN : \
+    && apt-get update \
+    && apt-get install \
+    -y --no-install-recommends \
     curl \
     git \
     ipython \
@@ -13,31 +20,40 @@ RUN apt-get install -y \
     vim \
     g++ \
     gnupg \
-    gcc
+    gcc \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 ###########################
 ## Database Dependencies ##
 ###########################
 
 # Postgres
-RUN apt-get -y install libpq-dev
+RUN : \
+    && apt-get update \
+    && apt-get install \
+    -y --no-install-recommends \
+    libpq-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # SQL Server (MS SQL)
 RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
 RUN curl https://packages.microsoft.com/config/debian/10/prod.list | tee /etc/apt/sources.list.d/msprod.list
-RUN apt-get update
 ENV ACCEPT_EULA=y DEBIAN_FRONTEND=noninteractive
-RUN apt-get -y install \
+RUN : \
+    && apt-get update \
+    && apt-get install \
+    -y --no-install-recommends \
     apt-transport-https \
     unixodbc-dev \
-    mssql-tools
+    mssql-tools \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-#######################
-## Application Setup ##
-#######################
-
-# Install Requirements
-RUN pip install -U pip
+#########################
+## Python Dependencies ##
+#########################
 
 COPY dev-requirements.txt dev-requirements.txt
 RUN pip install -r dev-requirements.txt
@@ -45,13 +61,15 @@ RUN pip install -r dev-requirements.txt
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-COPY optional_requirements.txt optional_requirements.txt
-RUN pip install -r optional_requirements.txt
+COPY optional-requirements.txt optional-requirements.txt
+RUN pip install -r optional-requirements.txt
 
-# Copy in the application files and install fidesctl locally
+###############################
+## General Application Setup ##
+###############################
+
 COPY . /fides/fidesctl
 WORKDIR /fides/fidesctl
-RUN pip install -e ".[all,mssql]"
 
 # Immediately flush to stdout, globally
 ENV PYTHONUNBUFFERED=TRUE
@@ -61,3 +79,22 @@ ENV RUNNING_IN_DOCKER=TRUE
 
 EXPOSE 8080
 CMD ["fidesctl", "webserver"]
+
+###################################
+## Application Development Setup ##
+###################################
+
+FROM builder as dev
+
+# Install fidesctl as a symlink
+RUN pip install -e ".[all,mssql]"
+
+##################################
+## Production Application Setup ##
+##################################
+
+FROM builder as prod
+
+# Install without a symlink
+RUN python setup.py sdist
+RUN pip install dist/fidesctl-*.tar.gz
