--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -4,9 +4,6 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - fidesctl/**
-      - .github/workflows/pr_checks.yaml
 
 env:
   CONTAINER: fidesctl-local
@@ -27,8 +24,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          context: ./fidesctl
-          file: ./fidesctl/Dockerfile
+          context: .
           target: prod
           outputs: type=docker,dest=/tmp/${{ env.CONTAINER }}.tar
           push: false
