ignore the egg other than entry_points

--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,8 @@ parts/
 sdist/
 var/
 wheels/
+*egg-info/
+!*egg-info/entry_points.txt # Required so that this works when mounted via docker-compose
 .installed.cfg
 *.egg
 MANIFEST
