--- a/.fides/fidesctl.toml
+++ b/.fides/fidesctl.toml
@@ -1,7 +1,7 @@
 [api]
 database_user = "postgres"
 database_password = "fidesctl"
-database_host = "fidesctl-db"
+database_host = "localhost"
 database_port = "5432"
 database_name = "fidesctl"
 test_database_name = "fidesctl_test"
@@ -9,6 +9,7 @@ test_database_name = "fidesctl_test"
 [cli]
 server_host = "localhost"
 server_port = 8080
+analytics_id = "internal"
 
 [user]
 analytics_opt_out = false
