--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -28,7 +28,7 @@ jobs:
         run: pip install -r docs/fides/requirements.txt
 
       - name: Install fidesctl
-        run: pip install -e fidesctl/[all]
+        run: pip install -e ./[all]
 
       - name: Checkout the gh-pages branches
         run: git fetch origin gh-pages --depth=1
