--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,14 @@ exclude = '''
 )/
 '''
 
+#######
+# isort
+#######
+[tool.isort]
+profile = "black"
+line_length = 88
+src_paths = ["src", "tests"]
+
 ########
 # Pylint
 ########
