--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -97,8 +97,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Install Docs Requirements
+        run: pip install -r docs/fides/requirements.txt
+
+      - name: Install fidesctl
+        run: pip install -e ./[all]
+
+      - name: Build Generated docs
+        run: make docs-build
+
       - name: Build docs
-        run: make docs-build-ci
+        run: mkdocs build
 
   Pylint:
     needs: Build
